&score
Test.c: In function ‘main’:
Test.c:5:26: error: expected ‘;’ before ‘return’
    5 |     printf("Hello world")
      |                          ^
      |                          ;
    6 |     return 0 ;
      |     ~~~~~~                
